# python-qrplatba

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml  release.yml
qrplatba/: __init__.py  generator.py  spayd.py  svg.py  util.py
tests/: test_spayd.py  test_svg.py
