[project]
name = "qrplatba"
version = "1.2.0"
description = "QR platba SVG/PNG QR code and SPAYD string generator."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Viktor Stískala", email = "viktor@stiskala.cz" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "qrcode>=7.4",
]

[project.optional-dependencies]
png = ["resvg-py>=0.2"]

[project.urls]
Repository = "https://github.com/ViktorStiskala/python-qrplatba"

[dependency-groups]
test = [
    "pytest>=9; python_version >= '3.10'",
    "pytest>=8.3, <9; python_version < '3.10'",
    "pytest-github-actions-annotate-failures>=0.3",
]
lint = [
    "ruff>=0.15",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "pre-commit>=4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.10.8,<0.11"]
build-backend = "uv_build"
